View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0026461 | Open CASCADE | OCCT:Data Exchange | public | 2015-07-20 12:34 | 2015-10-23 20:49 |
Reporter | Assigned To | ||||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Product Version | 6.9.0 | ||||
Target Version | 6.9.1 | Fixed in Version | 6.9.1 | ||
Summary | 0026461: STEP Import interface crashes | ||||
Description | STEP Import interface crashes during reading the attached file. | ||||
Steps To Reproduce | pload DATAEXCHANGE ReadStep d1 d:/test_ap227.stp | ||||
Tags | No tags attached. | ||||
Test case number | bugs step bug26461 | ||||
2015-07-20 12:34 manager |
test_ap227.zip (163,283 bytes) |
|
Branch CR26461 has been created by ika. SHA-1: 5e6eec0245e55ebf224392bac2d226bd0947700d Detailed log of new commits: Author: ika Date: Thu Aug 20 18:10:23 2015 +0300 0026461: STEP Import interface crashes Add a check for NULL; some code refactoring. |
|
Dear GKA, could you please review branch CR26461? |
|
Branch CR26461 is ready to be tested |
|
Branch CR26461 has been updated forcibly by mkv. SHA-1: bfec4e09cb85be295d4cc6787178ac91718f6170 |
|
Dear BugMaster, Branch CR26461 was rebased on current master of occt git-repository. SHA-1: bfec4e09cb85be295d4cc6787178ac91718f6170 |
|
Dear BugMaster, Branch CR26461 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested on Release mode. SHA-1: bfec4e09cb85be295d4cc6787178ac91718f6170 Number of compiler warnings: occt component : Linux: 15 (15 on master) Windows: 0 (0 on master) products component : Linux: 39 (39 on master) Windows: 0 (0 on master) Regressions/Differences/Improvements: No regressions/differences Testing cases: http://occt-tests/CR26461-master-occt-64/Debian70-64/bugs/step/bug26461.html http://occt-tests/CR26461-master-occt-64/Windows-64-VC10/bugs/step/bug26461.html bugs step bug26461: OK Testing on Linux: occt component : Total MEMORY difference: 91741415 / 91603502 [+0.15%] Total CPU difference: 17639.559999999117 / 17713.989999998943 [-0.42%] products component : Total MEMORY difference: 25122797 / 25123208 [-0.00%] Total CPU difference: 7024.20999999998 / 7008.090000000001 [+0.23%] Testing on Windows: occt component : Total MEMORY difference: 57063775 / 57056005 [+0.01%] Total CPU difference: 16546.495666599076 / 16696.693429399114 [-0.90%] products component : Total MEMORY difference: 16120029 / 16119994 [+0.00%] Total CPU difference: 5241.446398799961 / 5290.8519154999685 [-0.93%] There are no differences in images found by testdiff. |
|
Branch CR26461 has been updated by mkv. SHA-1: 0d31f7c96d574dede32c510db938dc7d7a585073 Detailed log of new commits: Author: mkv Date: Mon Aug 24 16:38:27 2015 +0300 Test case for issue CR26461 |
|
Branch CR26461 has been deleted by kgv. SHA-1: 0d31f7c96d574dede32c510db938dc7d7a585073 |
occt: master 9c3cce7a 2015-08-27 10:30:38 Committer: |
0026461: STEP Import interface crashes Add a check for NULL; some code refactoring. Test case for issue CR26461 |
Affected Issues 0026461 |
|
mod - src/STEPCAFControl/STEPCAFControl_Reader.cxx | Diff File | ||
add - tests/bugs/step/bug26461 | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2015-07-20 12:34 |
|
New Issue | |
2015-07-20 12:34 |
|
Assigned To | => gka |
2015-07-20 12:34 |
|
File Added: test_ap227.zip | |
2015-07-20 12:37 |
|
Steps to Reproduce Updated | |
2015-08-20 15:45 | gka | Assigned To | gka => ika |
2015-08-20 15:45 | gka | Status | new => assigned |
2015-08-20 18:11 | git | Note Added: 0044489 | |
2015-08-20 18:12 | ika | Note Added: 0044490 | |
2015-08-20 18:12 | ika | Assigned To | ika => gka |
2015-08-20 18:12 | ika | Status | assigned => resolved |
2015-08-24 10:30 | gka | Note Added: 0044529 | |
2015-08-24 10:30 | gka | Assigned To | gka => bugmaster |
2015-08-24 10:30 | gka | Status | resolved => reviewed |
2015-08-24 11:05 |
|
Assigned To | bugmaster => mkv |
2015-08-24 11:22 | git | Note Added: 0044533 | |
2015-08-24 16:55 |
|
Note Added: 0044561 | |
2015-08-24 16:56 |
|
Note Added: 0044562 | |
2015-08-24 16:56 |
|
Assigned To | mkv => bugmaster |
2015-08-24 16:56 |
|
Status | reviewed => tested |
2015-08-24 16:56 | git | Note Added: 0044563 | |
2015-08-24 16:57 |
|
Test case number | => bugs step bug26461 |
2015-08-26 11:17 | abv | Target Version | 7.0.0 => 6.9.1 |
2015-08-28 11:44 |
|
Changeset attached | => occt master 9c3cce7a |
2015-08-28 11:44 |
|
Assigned To | bugmaster => ski |
2015-08-28 11:44 |
|
Status | tested => verified |
2015-08-28 11:44 |
|
Resolution | open => fixed |
2015-10-16 14:56 |
|
Status | verified => closed |
2015-10-16 16:47 | git | Note Added: 0047049 | |
2015-10-23 20:49 |
|
Fixed in Version | => 6.9.1 |