0026461: STEP Import interface crashes

Add a check for NULL;
some code refactoring.